--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -2,6 +2,8 @@
 
   <h2>{{hero.name | uppercase}}'S Details</h2>
   <div><span>id: </span>{{hero.id}}</div>
+  <button name="backbutton" type="button" (click)="goBack()">Cancel</button>
+
   <div>
     <label for="hero-name">Hero name: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
