--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
 <h2>Top Heroes</h2>
 <div class="heroes-menu">
-  <img src="favicon.ico" *ngIf="showLoader">
-
-  <a *ngFor="let hero of heroes" routerLink="/detail/{{hero.id} }">
+  <a *ngFor="let hero of heroes"
+     routerLink="/detail/{{hero.id}}">
     {{hero.name}}
   </a>
-
 </div>
+
+<app-hero-search>
+  
+</app-hero-search>
