--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,10 +1,11 @@
-
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
     </a>
+    <button type="button" class="delete" title="delete hero"
+            (click)="delete(hero)">x</button>
   </li>
   <div>
     <label for="new-hero">Hero name: </label>
@@ -12,9 +13,13 @@
 
     <!-- (click) passes input value to add() and then clears the input -->
     <button type="button" class="add-button" (click)="add(heroName.value); ">
+
       Add hero
     </button>
   </div>
+
+
 </ul>
+
 
 
