--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
 <h1>{{title}}</h1>
 <!--navigation start -->
-<nav>
-  <a routerLink="/dashboard">Dashboard </a>
-  <a routerLink="/heroes"> Heroes</a>
-</nav>
+<app-navigationbar></app-navigationbar>
 <!--navigation ends-->
 
 <!--routed component start-->
