--- a/src/app/navigationbar/navigationbar.component.html
+++ b/src/app/navigationbar/navigationbar.component.html
@@ -2,6 +2,7 @@
 <nav>
   <li><a routerLink="/dashboard">Dashboard </a></li>
   <li><a routerLink="/heroes"> Heroes</a></li>
+  <li><a routerLink="/HeroForm">Forms</a></li>
 </nav>
 </ul>
 <!--search bar-->
