--- a/src/app/hero-form/hero-form.component.css
+++ b/src/app/hero-form/hero-form.component.css
@@ -1,3 +1,10 @@
-h2{
+h1{
   text-align: center;
+}
+
+.ng-valid[required]{
+  border-left:5px solid green;
+}
+.ng-invalid:not(form){
+  border-left: 5px solid crimson;
 }
