--- a/src/app/navigationbar/navigationbar.component.html
+++ b/src/app/navigationbar/navigationbar.component.html
@@ -1,9 +1,18 @@
-<ul>
-<nav>
-  <li><a routerLink="/dashboard">Dashboard </a></li>
-  <li><a routerLink="/heroes"> Heroes</a></li>
-  <li><a routerLink="/HeroForm">Forms</a></li>
+<!--<ul>-->
+<!--<nav>-->
+<!--  <li><a routerLink="/dashboard">Dashboard </a></li>-->
+<!--  <li><a routerLink="/heroes"> Heroes</a></li>-->
+<!--  <li><a routerLink="/HeroForm">Forms</a></li>-->
+<!--  <li><a routerLink="/HeroForm">Yout</a></li>-->
+<!--</nav>-->
+<!--</ul>-->
+
+<nav class="navbar navbar-light bg-light">
+  <form class="form-inline">
+    <button class="btn btn-outline-success" type="button" ><a routerLink="/dashboard">Dashboard </a></button>
+    <button class="btn btn-sm btn-outline-secondary" type="button"><a routerLink="/heroes"> Heroes</a></button>
+
+  </form>
 </nav>
-</ul>
 <!--search bar-->
-<app-hero-search></app-hero-search>
+
