--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -4,10 +4,10 @@
 
   <div class="row">
 
-    <div class="col-6">
+    <div class="col">
 <h2>My Heroes</h2>
     </div>
-<div id="searchComponent" class="col-4">
+<div id="searchComponent" class="col">
   <app-hero-search></app-hero-search>
 </div>
   </div>
@@ -19,13 +19,15 @@
 
   <div *ngFor="let hero of heroes">
 
-  <a routerLink="/detail/{{hero.id}}" class="list-group-item list-group-item-action">{{hero.name}}</a>
-    <button type="button" class="btn btn-danger" title="delete hero"
-            (click)="delete(hero)">X</button>
- </div>
+  <a routerLink="/detail/{{hero.id}}"  class="list-group-item list-group-item-action">
+  {{hero.name}}
+ </a>
+  <button type="button" class="btn btn-danger" title="delete hero"
+          (click)="delete(hero)">X</button>
+  </div>
 
 </div>
-<!--listing heroes end-->
+
 
 
 
