--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,8 +1,4 @@
-
-
-
-
-
+<div class="heroDetailsCadBackground">
 <div *ngIf="hero" id="heroDetailsCard" class="heroDetailsCard">
 
   <h2>{{hero.name | uppercase}}'S Details</h2>
@@ -11,7 +7,7 @@
 
   <div class="info">
     <label for="hero-name">Hero name: </label>
-    <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
+    <input id="hero-name" class="heroDetailsInput" [(ngModel)]="hero.name" placeholder="name">
   </div>
   <h3><span>Id: </span>{{hero.id}}</h3>
 
@@ -19,9 +15,10 @@
 
 
 
-  <button class="btn btn-primary" name="backbutton" type="button" (click)="goBack()">Back</button>
-  <button class="btn btn-secondary" name="save" (click)="save()">save info</button>
+  <button class="heroDetailsButton" name="backButton" type="button" (click)="goBack()">Back</button>
+  <button class="heroDetailsButton" name="save" (click)="save()">save info</button>
 
 
 </div>
 
+</div>
