--- a/src/app/hero-search/hero-search.component.css
+++ b/src/app/hero-search/hero-search.component.css
@@ -14,6 +14,7 @@ input {
   max-width: 600px;
   box-sizing: border-box;
   display: block;
+  margin: auto;
 }
 
 input:focus {
@@ -34,14 +35,17 @@ li {
   box-sizing: border-box;
   text-decoration: none;
   color: black;
+  margin: auto;
 }
 
 .search-result li a:hover {
   background-color: #435A60;
+
   color: white;
 }
 
 ul.search-result {
-  margin-top: 0;
+  text-align: center;
   padding-left: 0;
 }
+
