--- a/src/app/navigationbar/navigationbar.component.css
+++ b/src/app/navigationbar/navigationbar.component.css
@@ -1,27 +1,28 @@
-ul {
-  list-style-type: none;
+body {
   margin: 0;
-  padding: 0;
-  background: #336699;
+  font-family:cursive;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #f1f1f1;
+.topnav {
+  overflow: hidden;
+  background-color: #3f525c;
 }
 
-li a {
-  display: block;
-  color: #000;
-  padding: 8px 16px;
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
+  font-size: 17px;
 }
 
-/* Change the link color on hover */
-li a:hover {
-  background-color: #555;
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #a458a2;
   color: white;
 }
