--- a/src/app/navigationbar/navigationbar.component.html
+++ b/src/app/navigationbar/navigationbar.component.html
@@ -7,12 +7,17 @@
 <!--</nav>-->
 <!--</ul>-->
 
-<nav class="navbar navbar-light bg-light">
-  <form class="form-inline">
-    <button class="btn btn-outline-success" type="button" ><a routerLink="/dashboard">Dashboard </a></button>
-    <button class="btn btn-sm btn-outline-secondary" type="button"><a routerLink="/heroes"> Heroes</a></button>
 
-  </form>
+
+
+
+<div class="topnav">
+
+<nav >
+    <a class="active" routerLink="/dashboard">Dashboard</a>
+  <a type="button"routerLink="/heroes"> Heroes</a>
+
 </nav>
+</div>
 <!--search bar-->
 
