--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,8 +1,22 @@
-<div *ngIf="MessageServiceInMessagesComponent.messages.length">
+<div >
 
-  <h2>Messages:</h2>
+
   <button type="button"
           class="clear"
           (click)="MessageServiceInMessagesComponent.clear()">Clear All</button>
-  <div *ngFor="let message of MessageServiceInMessagesComponent.messages">{{message}}</div>
+
+</div>
+
+
+<!--START OF MESSAGES-->
+<div class="messeges">
+<h2>Messages:</h2>
+<div *ngFor="let message of MessageServiceInMessagesComponent.messages">
+<div class="container" *ngIf="MessageServiceInMessagesComponent.messages.length" >
+  <div class="message-blue">
+    <p class="message-content" >{{message}}</p>
+    <div class="message-timestamp-left">SMS 13:37</div>
+  </div>
+</div>
+</div>
 </div>
