changed delete button to red Circle
		needs positioning

--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,10 +1,10 @@
-<div >
+<div>
 
-
-  <button type="button"
-          class="clear"
-          (click)="MessageServiceInMessagesComponent.clear()">Clear All</button>
-
+<span class="crosssign" (click)="MessageServiceInMessagesComponent.clear()">
+  <div class="crosssign_circle"></div>
+  <div class="crosssign_stem"></div>
+  <div class="crosssign_stem2"></div>
+</span>
 </div>
 
 
@@ -20,3 +20,5 @@
 </div>
 </div>
 </div>
+
+
