--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -1,7 +1,8 @@
 
 
 .messeges{
-  overflow: scroll;
+display: flex;
+  flex-direction: column;
 }
 
 .message-blue {
@@ -59,6 +60,43 @@
   border-right: 16px solid transparent;
   top: -1%;
   left: -17px;
+}
+
+.crosssign {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  position: relative;
+  transform: rotate(45deg);
+}
+
+.crosssign_circle {
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  background-color: red;
+  border-radius: 11px;
+  left: 0;
+  top: 0;
+}
+
+.crosssign_stem,
+.crosssign_stem2 {
+  position: absolute;
+  background-color: #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.crosssign_stem {
+  width: 3px;
+  height: 9px;
+}
+
+.crosssign_stem2 {
+  width: 9px;
+  height: 3px;
 }
 
 
