--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,5 +1,4 @@
 /* DashboardComponent's private CSS styles */
-
 h2 {
   text-align: center;
 }
@@ -8,7 +7,7 @@ h2 {
   padding: 0;
   margin: auto auto 3%;
   max-width: 1000px;
-
+  animation: Load 1500ms ease-out;
   /* flexbox */
   display: flex;
   flex-direction: row;
@@ -16,7 +15,6 @@ h2 {
   justify-content: space-around;
   align-content: flex-start;
   align-items: flex-start;
-
 }
 
 a {
@@ -32,19 +30,16 @@ a {
   min-width: 70px;
   margin: .5rem auto;
   box-sizing: border-box;
-  /**/
-  /* flexbox */
+   /*flexbox */
   order: 0;
   flex: 0 1 auto;
   align-self: auto;
 }
 
 .heroDashboardImg{
-
   width: 100%;
   height: 15vw;
   object-fit: cover;
-
 }
 
 @media (min-width: 600px) {
