--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
+
+/*adding animations*/
+@keyframes Load {
+  0%{
+    transform:translateY(-100%);
+  }
+
+  100%{
+    transform: translateY(0%);
+  }
+}
