added spinner.component and added it to app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 
 <!--routed component start-->
 <router-outlet></router-outlet>
+<app-spinner></app-spinner>
 <!--routed component ends-->
 
 <!--messages component start-->
