--- a/src/app/navigationbar/navigationbar.component.html
+++ b/src/app/navigationbar/navigationbar.component.html
@@ -1,6 +1,7 @@
 <!--navigation bar start-->
 <div class="top-nav">
   <nav >
+    <img src="assets/hero.default.png" class="navbar-profile-picture">
     <a class="active" routerLink="/dashboard"  [ngClass]="{'navbar-active-page':currentPage==='/dashboard'}">Dashboard</a>
     <a type="button"routerLink="/heroes" [ngClass]="{'navbar-active-page':currentPage==='/heroes'}"> Heroes</a>
     <a routerLink="/" class="navbar-title">TOUR HEROES GUIDE</a>
