--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -19,22 +19,10 @@
               (click)="delete(hero)">Delete Hero</button>
     </div>
   </div>
+  <label for="new-hero">Hero name: </label>-->
+  <input id="new-hero" #heroName />
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button type="button" class="add-button" (click)="add(heroName.value); ">
+    Add hero
+  </button>
 </div>
-  <!--<ul class="heroes">-->
-  <!--  <li *ngFor="let hero of heroes">-->
-  <!--    <a routerLink="/detail/{{hero.id}}">-->
-  <!--      <span class="badge">{{hero.id}}</span> {{hero.name}}-->
-  <!--    </a>-->
-  <!--    <button type="button" class="delete" title="delete hero"-->
-  <!--            (click)="delete(hero)">x</button>-->
-  <!--  </li>-->
-  <!--  <div>-->
-  <!--    <label for="new-hero">Hero name: </label>-->
-  <!--    <input id="new-hero" #heroName />-->
-  <!--    &lt;!&ndash; (click) passes input value to add() and then clears the input &ndash;&gt;-->
-  <!--    <button type="button" class="add-button" (click)="add(heroName.value); ">-->
-  <!--      Add hero-->
-  <!--    </button>-->
-  <!--  </div>-->
-  <!--</ul>-->
-  <!--listing heroes start-->
