--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 a {
-  background-color: #3f525c;
+  background-color: var(--mainColor1);
   border-radius: 2px;
   padding: 1rem;
   font-size: 2.2rem;
