--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -62,16 +62,16 @@
 .delete-hero-button:hover{
   color: #e6e6e6;
   transition: 0.2s;
-  background-color: #a458a2;
+  background-color: var(--mainColor);
 }
 
 .list-title{
-background: #a458a2;
+background: var(--mainColor);
   color: #ffffff;
 }
 
 .list-title:hover{
-  background-color: #a458a2;
+  background-color: var(--mainColor);
   color: #fffdfd;
 }
 
@@ -82,7 +82,7 @@ background: #a458a2;
 
 .heroName{
   margin-right: 50%;
-  border-bottom: 3px solid #a458a2;
+  border-bottom: 3px solid var(--mainColor);
 }
 
 h2{
