--- a/src/app/navigationbar/navigationbar.component.css
+++ b/src/app/navigationbar/navigationbar.component.css
@@ -1,6 +1,6 @@
 .top-nav {
   overflow: hidden;
-  background-color: #3f525c;
+  background-color:var(--mainColor1);
   animation: Load 300ms ease-in;
   position: sticky;
   top: 0;
@@ -12,7 +12,7 @@
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 16px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -29,6 +29,23 @@
   border-radius: 50%;
   width: 4%;
 }
+/*burger css*/
+@media (max-width: 1110px) {
+  .navbar-title{
+    margin-left: 58%;
+  }
+}@media (max-width: 965px) {
+  .navbar-title{
+    margin-left: auto;
+  }
+  .navbar-profile-picture{
+    display: none;
+  }
 
+  .top-nav a{
+    width:100%;
+  }
+
+}
 
 
