--- a/src/app/spinner/spinner.component.css
+++ b/src/app/spinner/spinner.component.css
@@ -1,14 +1,14 @@
 .loader,
 .loader:before,
 .loader:after {
-  background: #a458a2;
+  background: var(--mainColor);
   -webkit-animation: load1 1s infinite ease-in-out;
   animation: load1 1s infinite ease-in-out;
   width: 1em;
   height: 4em;
 }
 .loader {
-  color: #a458a2;
+  color: var(--mainColor);
   text-indent: -9999em;
   margin: 88px auto;
   position: relative;
