--- a/src/styles.css
+++ b/src/styles.css
@@ -11,3 +11,16 @@
     transform: translateY(0%);
   }
 }
+/*global colors*/
+* {
+  --mainColor: #a458a2;
+  --mainColor1: #3f525c;
+}
+@media only screen and  (min-width: 480px){
+
+  *{
+
+  }
+
+}
+
