--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -12,7 +12,7 @@
 /*stlying the card*/
 .hero-details-card {
   width: 30%;
-  margin: 331px auto;
+  margin: auto;
   padding: 35px;
   border: 2px solid #18606a;
   border-radius: 2%;
@@ -51,6 +51,6 @@ button, input, select, textarea {
 /*////////////adding media query////////////////////////////////////*/
 @media screen and (max-width: 700px){
   .hero-details-card{
-    width: 70%;
+    width: 400px;
   }
 }
