--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -3,7 +3,7 @@
     <h2>{{hero.name | uppercase}}'S Details</h2>
     <div class="info">
       <label for="hero-name">Hero name: </label>
-      <input id="hero-name" class="heroDetailsInput" [(ngModel)]="hero.name" placeholder="name">
+      <input id="hero-name" class="hero-details-input" [(ngModel)]="hero.name" placeholder="name">
     </div>
     <h3><span>Id: </span>{{hero.id}}</h3>
     <button class="hero-details-card-buttons" name="backButton" type="button" (click)="goBack()">Back</button>
